# circlers

./: .gitignore  Cargo.toml  README.md
benchmarking/: run_bench.py
src/: async_mpi.rs  circle.rs  lib.rs  termination_detector.rs  walker.rs
src/walker/: mod.rs
tests/: file_walking.rs
