[package]
name = "circlers"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.51", features = ["derive", "env", "string"] }
mpi = { version = "0.8.0", features = ["derive", "user-operations"] }
nix = { version = "0.30.1", features = ["dir", "fs", "ioctl", "uio", "user"] }
rand = "0.9.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
serde = { version = "1.0.188", features = ["derive"] }
bincode = "2.0.1"

[patch.crates-io]
mpi = { git = "https://github.com/ajz34/rsmpi.git", branch="fix-bindgen-3264" }