[package]
name = "circlers"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "1.3.3"
clap = { version = "4.5.51", features = ["derive", "env", "string"] }
ferrompi = { version = "0.3.0", features = ["rma", "numa"] }
futures = "0.3.32"
nix = { version = "0.31.2", features = ["dir", "fs", "ioctl", "uio", "user"] }
rand = "0.9.2"
serde = { version = "1.0.188", features = ["derive"] }
smol = "2.0.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
